Correction of layout problems

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+main {
+  margin-bottom: 100px;
+  padding-top: 40px;
+}
+
+#guitar {
+  float: left;
+}
+
 #dropdownLang {
   /*Color*/
   background-color: green;
