--- a/styles0.scss
+++ b/styles0.scss
@@ -2,8 +2,21 @@ $naturalColor: green;
 $naturalColor2: yellowgreen; 
 
 
+main 
+{    
+
+margin-bottom:100px ;
+padding-top :40px;
+}
 
 
+#guitar
+{
+float :left;
+
+
+
+}
 
 #dropdownLang
 {
@@ -17,7 +30,6 @@ $naturalColor2: yellowgreen;
 
     position: absolute;
     right: 0px; 
-
-    
     
 }
+
